# grpc-todo

./: Cargo.toml  cliff.toml  deny.toml
fixtures/: test.sql
grpc-todo/: Cargo.toml  backend.yaml
grpc-todo/src/: config.rs  lib.rs  main.rs  server.rs
grpc-todo/src/model/: mod.rs  todo.rs
htmx-warp/: Cargo.toml  build.rs
htmx-warp/src/: index.html  main.rs
migrations/: 20250330102333_init.sql
proto/: todo.proto
