[package]
name = "grpc-todo"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9.34"
sqlx = { workspace = true }
sqlx-db-tester = "0.6.0"
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
